; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_clauses.c_CitusIsVolatileFunctionIdChecker.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_clauses.c_CitusIsVolatileFunctionIdChecker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROVOLATILE_VOLATILE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i8*)* @CitusIsVolatileFunctionIdChecker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CitusIsVolatileFunctionIdChecker(i64 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i64 (...) @CitusReadIntermediateResultFuncId()
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @func_volatile(i64 %11)
  %13 = load i64, i64* @PROVOLATILE_VOLATILE, align 8
  %14 = icmp eq i64 %12, %13
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i64 @CitusReadIntermediateResultFuncId(...) #1

declare dso_local i64 @func_volatile(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
